Commented out placeholder domain URLs in meta tags

--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-IN">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Smile-Care</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="smile-care" />
-    
+    <title>Smile Care Dental Clinic</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Smile Care Dental Clinic – Trusted dental care with modern treatments, experienced dentists, and patient-first service." />
+    <meta name="keywords" content="Smile Care, dental clinic, dentist, oral care, teeth whitening, dental implants, root canal, braces, India" />
+    <meta name="author" content="Smile Care Dental Clinic" />
+
+    <!-- Open Graph / Facebook Meta Tags -->
+    <meta property="og:title" content="Smile Care Dental Clinic" />
+    <meta property="og:description" content="Trusted dental care with modern treatments and patient-first service." />
     <meta property="og:type" content="website" />
-    
+    <!-- <meta property="og:url" content="https://yourdomain.com/" /> -->
+    <!-- <meta property="og:image" content="https://yourdomain.com/og-image.jpg" /> -->
 
+    <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
- 
+    <meta name="twitter:title" content="Smile Care Dental Clinic" />
+    <meta name="twitter:description" content="Trusted dental care with modern treatments and patient-first service." />
+    <!-- <meta name="twitter:image" content="https://yourdomain.com/twitter-image.jpg" /> -->
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" />
   </head>
 
   <body>
     <div id="root"></div>
+
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
